# SimpleAPI

./: README.md  pyproject.toml
src/simpleapi/: __init__.py  main.py
