[project]
name = "simpleapi"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ikura1", email = "ikura.lab@gmail.com" }
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0.post1",
    "requests>=2.31.0",
    "opencv-python>=4.8.1.78",
    "python-multipart>=0.0.6",
    "Pillow>=10.1.0",
    "pydantic>=2.5.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.11.0",
]

[tool.hatch.metadata]
allow-direct-references = true
